# hes-advprog-26

./: .gitignore  README.md  dune-project  hes-gadts.opam
.nix/: flake.nix
code/: Bits.scala  PackedArray.scala  RBTree.scala  SmartArray.scala  Tree.scala  TreeBench.scala
slides/: .gitignore  dune  index.html  main.ml  scala.css  slides.css
